--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
         <li><a href="/alien/alien.html"></a>Alien</li>
     </ul><br>
     <ul>
-<li><a href="https://aDyon4.github.com/"></a>ADAMDOMI</li>
+<li><a href="https://aDyon4.github.com/"></a>ADAMDOMI</li> <br>
     </ul>
+    <ul>
+        <li><a href="/Nyuszi/index.html"></a>Nyuszi</li>
+    </ul><br>
 </body>
 </html>
