--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <li><a href="https://aDyon4.github.com/"></a>ADAMDOMI</li> <br>
     </ul>
     <ul>
-        <li><a href="/Nyuszi/index.html"></a>Nyuszi</li>
+        <li><a href="Nyuszi/index.html"></a>Nyuszi</li>
     </ul><br>
 </body>
 </html>
