--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 </head>
 <body>
     <ul>
-        <li><a href="/alien/alien.html"></a>Alien</li>
+        <li><a href="/alien/alien.html">Alien</a></li>
     </ul><br>
     <ul>
-<li><a href="https://aDyon4.github.com/"></a>ADAMDOMI</li> <br>
+<li><a href="https://aDyon4.github.com/">ADAMDOMI</a></li> <br>
     </ul>
     <ul>
-        <li><a href="Nyuszi/index.html"></a>Nyuszi</li>
+        <li><a href="Nyuszi/index.html">Nyuszi</a></li>
     </ul><br>
 </body>
 </html>
