--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <li><a href="https://aDyon4.github.com/">ADAMDOMI</a></li> <br>
     </ul>
     <ul>
-        <li><a href="Nyuszi/index.html">Nyuszi</a></li>
+        <li><a href="/Nyuszi/index.html">Nyuszi</a></li>
     </ul><br>
 </body>
 </html>
